Add option to delete levels by author
